# FlexQL

./: CMakeLists.txt  README.md  compile.sh
benchmark/: benchmark_flexql.cpp
docs/: BENCHMARK_MODES.md  DESIGN_DOCUMENT.md  REQUIREMENTS_CHECKLIST.md  TEST_RESULTS.md
include/: fast_float.h  flexql.h
sql/: test_smoke.sql
src/client/: flexql.cpp  main.cpp  microbench_exec.cpp
src/server/: main.cpp
